Release 1.0.1
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>